Updated design and theme

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <!-- HERO SECTION -->
         <header class="hero">
+            <img src="profile.jpg" alt="Sajid Hussain" class="profile-pic">
             <h1>Sajid Hussain</h1>
             <p class="subtitle">Data Engineer</p>
             <a href="#" class="btn-resume">VIEW RESUME</a>
